# etherea

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: cli.rs  font.rs  input.rs  lib.rs  main.rs
