[package]
name = "etherea"
description = "An interpreter for the CHIP-8 programming language."
homepage = "https://github.com/alythical/etherea"
repository = "https://github.com/alythical/etherea"
readme = "README.md"
license = "MIT"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.32", features = [ "derive" ] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
pixels = "0.11.0"
rand = "0.8.5"
winit = "0.27.5"
winit_input_helper = "0.13.0"

[lib]
path = "src/lib.rs"
